# dox-asdlc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start-backend.sh  start-frontend.sh  start-orchestrator.sh
.claude/: settings.json  settings.local.json
.claude/agents/: backend.md  devops.md  frontend.md  implementer.md  orchestrator.md  planner.md  reviewer.md
.claude/coordination/: README.md  status.json
.claude/hooks/: startup.sh
.claude/rules/: coordination-protocol.md  identity-selection.md  orchestrator.md  parallel-coordination.md  pm-cli.md  workflow.md
.claude/subagents/: backend.md  frontend.md  orchestrator.md
.github/workflows/: README.md  deploy-cloud-run.yml  teardown-cloud-run.yml
.workitems/P00-F01-multi-session-infrastructure/: design.md  tasks.md  user_stories.md
.workitems/P01-F01-infra-setup/: tasks.md
.workitems/P01-F02-bash-tools/: design.md  tasks.md  user_stories.md
.workitems/P01-F03-knowledge-store/: design.md  tasks.md  user_stories.md
.workitems/P01-F04-cli-coordination-redis/: design.md  tasks.md  user_stories.md
.workitems/P01-F07-cli-subagents/: design.md  tasks.md  user_stories.md
.workitems/P06-F02-redis-k8s/: tasks.md  (+2 more)
docker/: docker-compose.yml
docs/: Interaction_Model.md  K8s_Service_Access.md  SPA_Information_Architecture.md  System_Design.md  worktree-workflow.md
scripts/: build-images.sh  check-completion.sh  check-compliance.sh  check-planning.sh  cli-identity.sh  start-agent-session.sh
tools/: README.md  ast.sh  e2e.sh  lint.sh  sast.sh  sca.sh  test.sh
(+628 files in other folders)
